--- a/index.html
+++ b/index.html
@@ -112,6 +112,19 @@
 <h2>Preprints</h2>
 <table class="pub_table">
   <tbody>
+  
+  <tr>
+    <td class="pub_td1"><img src="./files/airfoil-pipeline.png" class="papericon"></td>
+    <td class="pub_td2"><br><b>AFBench: A Large-scale Benchmark for Airfoil Design</b>
+      <br><u>Jian Liu</u>, Jianyu Wu, Hairun Xie, Guoqing Zhang, Jing Wang, Wei Liu, Wanli Ouyang, Junjun Jiang, Xianming Liu, Shixiang Tang, Miao Zhang
+      <br>Paper UnderReview
+      <br>
+      <!-- [<a href="https://arxiv.org/abs/2402.01166">PDF</a>] -->
+      [<a href="https://github.com/hitcslj/AFBench">Github</a>]
+      [<a href="https://hitcslj.github.io/afbench/">Project Page</a>]
+    </td>
+  </tr>
+
 
   <tr>
     <td class="pub_td1"><img src="./files/ssd_pipeline.png" class="papericon"></td>
