--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
   <p> I am a 2<sup>nd</sup> year PhD student in Computer Science at Harbin Institute of Technology (HIT).
   I obtained my Bachelor's degree in Software Engineering from HIT in 2022. 
-  I am actively engaged in research focused on various aspects of <b>3D vision</b>, including <a href="https://github.com/hitcslj/awesome-robust-depth-estimation">depth estimation</a>, <a href="https://github.com/CVPR2023-3D-Occupancy-Prediction/CVPR2023-3D-Occupancy-Prediction">3D occupancy prediction</a> and <a href="https://github.com/hitcslj/Awesome-AIGC-3D">AIGC 3D</a>. Additionally, I am also involved in the exciting field of <b>AI4Science</b>, specifically in the area of <a href="https://github.com/hitcslj/awesome-airfoil-design">airfoil design</a>. <b> I will quit my phd job in 2024, if you have any job opportunities, please contact me. </b> </p>
+  I am actively engaged in research focused on various aspects of <b>3D vision</b>, including <a href="https://github.com/hitcslj/awesome-robust-depth-estimation">depth estimation</a>, <a href="https://github.com/CVPR2023-3D-Occupancy-Prediction/CVPR2023-3D-Occupancy-Prediction">3D occupancy prediction</a> and <a href="https://github.com/hitcslj/Awesome-AIGC-3D">AIGC 3D</a>. Additionally, I am also involved in the exciting field of <b>AI4Science</b>, specifically in the area of <a href="https://github.com/hitcslj/awesome-airfoil-design">airfoil design</a>. </p>
 
 
 
