--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
       <br>CVPR23 Autonomous Driving Challenge
       <br>
       [<a href="https://arxiv.org/abs/2402.18140">PDF</a>]
+      [<a href="https://www.bilibili.com/video/BV1pN411D7au/?spm_id_from=333.999.0.0&vd_source=0fb3bb9416e8fa252211d77e6b01b9d0">Talk</a>]
     </td>
   </tr>
 
