--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
         <a href="https://leetcode.cn/u/hitcslj/">Leetcode Link</a>
 <!--          https://leetcode.com/u/UShitcslj/-->
         <br> CV: 
-        <a href="./files/jianliu.pdf">CV Link</a>
+        <a href="./files/jianliu.pdf">CV Link(Chinese)</a>
+        <a href="./files/jianliu_en.pdf">CV Link(English)</a>
         <br><br></p>
       </td>
       <td>
