--- a/afbench/index.html
+++ b/afbench/index.html
@@ -186,7 +186,7 @@
                 <div class="publication-links">
                   <!-- Paper Link. -->
                   <span class="link-block">
-                    <a href="https://arxiv.org/pdf/2011.12948" 
+                    <a href="https://arxiv.org/abs/2406.18846" 
                       class="external-link button is-normal is-rounded is-dark">
                       <span class="icon">
                           <i class="ai ai-arxiv"></i>
