--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       <br><u>Jian Liu</u>, Jianyu Wu, Hairun Xie, Guoqing Zhang, Jing Wang, Wei Liu, Wanli Ouyang, Junjun Jiang, Xianming Liu, Shixiang Tang, Miao Zhang
       <br>Paper UnderReview
       <br>
-      <!-- [<a href="https://arxiv.org/abs/2402.01166">PDF</a>] -->
+      [<a href="https://arxiv.org/abs/2406.18846">PDF</a>]
       [<a href="https://github.com/hitcslj/AFBench">Github</a>]
       [<a href="https://hitcslj.github.io/afbench/">Project Page</a>]
     </td>
