--- a/afbench/index.html
+++ b/afbench/index.html
@@ -333,11 +333,14 @@
           <h2 class="title is-3  has-text-centered">🔥 Citation</h2>
             <div class="language-css">
             <pre style="">
-<code>@article{mao2024stealing,
-  title={Stealing Stable Diffusion Prior for Robust Monocular Depth Estimation},
-  author={Mao, Yifan and Liu, Jian and Liu, Xianming},
-  journal={arXiv preprint arXiv:2403.05056},
-  year={2024}
+<code>@misc{liu2024afbenchlargescalebenchmarkairfoil,
+  title={AFBench: A Large-scale Benchmark for Airfoil Design}, 
+  author={Jian Liu and Jianyu Wu and Hairun Xie and Guoqing Zhang and Jing Wang and Wei Liu and Wanli Ouyang and Junjun Jiang and Xianming Liu and Shixiang Tang and Miao Zhang},
+  year={2024},
+  eprint={2406.18846},
+  archivePrefix={arXiv},
+  primaryClass={cs.CE},
+  url={https://arxiv.org/abs/2406.18846}, 
 }</code></pre>
             
           </div>
