--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
       <br>ICRA24 RoboDrive Challenge
       <br>
       [<a href="https://arxiv.org/abs/2405.17102">PDF</a>]
-      [<a href="">Github</a>]
+      [<a href="https://github.com/hitcslj/DINO-SD">Github</a>]
       [<a href="https://www.bilibili.com/video/BV11H4y1M7mp/?vd_source=0fb3bb9416e8fa252211d77e6b01b9d0">Talk</a>]
     </td>
   </tr>
