--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <td width="670">
         <div id="toptitle">
         <h1>Jian Liu (Benjamin) &nbsp; 刘建</h1></div>
-        <h3>PHD student</h3>
+        <h3>Master student</h3>
         <p>Advanced Imaging and Intelligent Analysis Laboratory
         <br>Computing Faculty
         <br>Harbin Institute of Technology
