--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
 
 <h2>Selected Awards</h2>
 <ul>
-<!--  <li>-->
-<!--    <b>4<sup>th</sup></b> place at VisDA-2022 <a href="https://eval.ai/web/challenges/challenge-page/1806/leaderboard/4228">test leaderboard</a>, <b>NIPS 2022</b> Workshop-->
-<!--  </li>-->
+  <li>
+    <b>Outstanding</b> Intern at Shanghai AI Lab, 2024(H1)
+  </li>
   <li>
   <b>Outstanding</b> Graduates of Harbin Institute of Technology, 2022
   </li>
