--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <h2>Selected Awards</h2>
 <ul>
   <li>
-    <b>Outstanding</b> Intern at Shanghai AI Lab, 2024(H1)
+    <b>Outstanding</b> Intern at Shanghai AI Lab, 2024
   </li>
   <li>
   <b>Outstanding</b> Graduates of Harbin Institute of Technology, 2022
