update afbench -> openscienceLab

--- a/afbench/index.html
+++ b/afbench/index.html
@@ -198,7 +198,7 @@
                   
                   <!-- Code Link. -->
                   <span class="link-block">
-                    <a href="https://github.com/hitcslj/AFBench"
+                    <a href="https://github.com/open-sciencelab/Intern-WingWing"
                       class="external-link button is-normal is-rounded is-dark">
                       <span class="icon">
                           <i class="fab fa-github"></i>
