--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
   <tr>
     <td class="pub_td1"><img src="./files/reps_pipeline.png" class="papericon"></td>
     <td class="pub_td2"><br><b>REPS: Reconstruction-based Point Cloud Sampling</b>
-      <br>Guoqing Zhang, Wenbo Zhao, <u>Jian Liu (project leader)</u>, Xianming Liu
+      <br>Guoqing Zhang, <u>Jian Liu (equal contribution)</u>, Wenbo Zhao, Xianming Liu
       <br>Arxiv 2024
       <br>
       [<a href="https://arxiv.org/abs/2403.05047">PDF</a>]
