--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <h2>Experience</h2>
 <ul>
   <li>
-    Sep.2023 - Now , <i>Research Intern</i>, <b><a href="https://www.shlab.org.cn/"> Shanghai AI Lab</a></b>, supervised by <b><a href="https://scholar.google.com/citations?hl=en&user=TJ4ihdkAAAAJ">Shixiang Tang</a></b> and <b><a href="https://wlouyang.github.io/">Wanli Ouyang</a></b> 
+    Sep.2023 - July.2023 , <i>Research Intern</i>, <b><a href="https://www.shlab.org.cn/"> Shanghai AI Lab</a></b>, supervised by <b><a href="https://scholar.google.com/citations?hl=en&user=TJ4ihdkAAAAJ">Shixiang Tang</a></b> and <b><a href="https://wlouyang.github.io/">Wanli Ouyang</a></b> 
   </li>
   <li>
     May.2022 - Aug.2023 , <i>Research Intern</i>, <b><a href="https://research.megvii.com/">Megvii Research</a></b>, supervised by <b><a href="https://github.com/hzwer">Zhewei Huang</a></b> 
@@ -116,7 +116,7 @@
   <tr>
     <td class="pub_td1"><img src="./files/airfoil-pipeline.png" class="papericon"></td>
     <td class="pub_td2"><br><b>AFBench: A Large-scale Benchmark for Airfoil Design</b>
-      <br><u>Jian Liu</u>, Jianyu Wu, Hairun Xie, Guoqing Zhang, Jing Wang, Wei Liu, Wanli Ouyang, Junjun Jiang, Xianming Liu, Shixiang Tang, Miao Zhang
+      <br><b>Jian Liu</b>, Jianyu Wu, Hairun Xie, Guoqing Zhang, Jing Wang, Wei Liu, Wanli Ouyang, Junjun Jiang, Xianming Liu, Shixiang Tang, Miao Zhang
       <br>Paper UnderReview
       <br>
       [<a href="https://arxiv.org/abs/2406.18846">PDF</a>]
@@ -129,7 +129,7 @@
   <tr>
     <td class="pub_td1"><img src="./files/ssd_pipeline.png" class="papericon"></td>
     <td class="pub_td2"><br><b>Stealing Stable Diffusion Prior for Robust Monocular Depth Estimation</b>
-      <br> Yifan Mao, <u>Jian Liu (equal contribution)</u>, Xianming Liu
+      <br> Yifan Mao*, <b>Jian Liu*</b>, Xianming Liu
       <br>Arxiv 2024
       <br>
       [<a href="https://arxiv.org/abs/2403.05056">PDF</a>]
@@ -143,7 +143,7 @@
   <tr>
     <td class="pub_td1"><img src="./files/reps_pipeline.png" class="papericon"></td>
     <td class="pub_td2"><br><b>REPS: Reconstruction-based Point Cloud Sampling</b>
-      <br>Guoqing Zhang, <u>Jian Liu (equal contribution)</u>, Wenbo Zhao, Xianming Liu
+      <br>Guoqing Zhang*, <b>Jian Liu*</b>, Wenbo Zhao, Xianming Liu
       <br>Arxiv 2024
       <br>
       [<a href="https://arxiv.org/abs/2403.05047">PDF</a>]
@@ -155,7 +155,7 @@
   <tr>
     <td class="pub_td1"><img src="./files/aigc_3d.png" class="papericon"></td>
     <td class="pub_td2"><br><b>A Comprehensive Survey on 3D Content Generation</b>
-      <br><u>Jian Liu</u>, Xiaoshui Huang, Tianyu Huang, Lu Chen, Yuenan Hou, Shixiang Tang, Ziwei Liu, Wanli Ouyang, Wangmeng Zuo, Junjun Jiang, Xianming Liu
+      <br><b>Jian Liu</b>, Xiaoshui Huang, Tianyu Huang, Lu Chen, Yuenan Hou, Shixiang Tang, Ziwei Liu, Wanli Ouyang, Wangmeng Zuo, Junjun Jiang, Xianming Liu
       <br>Arxiv 2024
       <br>
       [<a href="https://arxiv.org/abs/2402.01166">PDF</a>]
@@ -174,7 +174,7 @@
   <tr>
     <td class="pub_td1"><img src="./files/dino_sd.png" class="papericon"></td>
     <td class="pub_td2"><br><b>DINO-SD: Champion Solution for ICRA 2024 RoboDepth Challenge</b>
-      <br>Yifan Mao, Ming Li, <u>Jian Liu (equal contribution)</u>, Jiayang Liu, Zihan Qin, Cunxi Chu, Jialei Xu, Wenbo Zhao, Junjun Jiang, Xianming Liu
+      <br>Yifan Mao*, Ming Li*, <b>Jian Liu*</b>, Jiayang Liu, Zihan Qin, Cunxi Chu, Jialei Xu, Wenbo Zhao, Junjun Jiang, Xianming Liu
       <br>ICRA24 RoboDrive Challenge
       <br>
       [<a href="https://arxiv.org/abs/2405.17102">PDF</a>]
@@ -186,7 +186,7 @@
   <tr>
     <td class="pub_td1"><img src="./files/occtransformer.png" class="papericon"></td>
     <td class="pub_td2"><br><b>OccTransformer: Improving BEVFormer for 3D camera-only occupancy prediction</b>
-      <br><u>Jian Liu</u>, Sipeng Zhang, Chuixin Kong, Wenyuan Zhang, Yuhang Wu, Yikang Ding, Borun Xu, Ruibo Ming, Donglai Wei, Xianming Liu
+      <br><b>Jian Liu</b>, Sipeng Zhang, Chuixin Kong, Wenyuan Zhang, Yuhang Wu, Yikang Ding, Borun Xu, Ruibo Ming, Donglai Wei, Xianming Liu
       <br>CVPR23 Autonomous Driving Challenge
       <br>
       [<a href="https://arxiv.org/abs/2402.18140">PDF</a>]
@@ -204,7 +204,7 @@
   <tr>
       <td class="pub_td1"><img src="./files/icra24_dinosd.png" class="papericon" width="300" height="130"></td>
       <td class="pub_td2"><br><b>1<sup>st</sup> place at Robust Depth Estimation</a> on RoboDrive Challenge, @ICRA 2024</b>
-        <br><u>Jian Liu</u>, Yifan Mao, Ming Li, Zihan Qin, Jiayang Liu, Jialei Xu, Cunxi Chu, Wenbo Zhao, Junjun Jiang, Xianming Liu
+        <br><b>Jian Liu</b>, Yifan Mao, Ming Li, Zihan Qin, Jiayang Liu, Jialei Xu, Cunxi Chu, Wenbo Zhao, Junjun Jiang, Xianming Liu
         <br>
         [<a href="https://robodrive-24.github.io">Challenge Website</a>]
       </td>
@@ -213,7 +213,7 @@
   <tr>
     <td class="pub_td1"><img src="./files/cvpr23_occ.jpg" class="papericon" width="300" height="130"></td>
     <td class="pub_td2"><br><b>Innovation Award at 3D occupancy prediction on autonomous driving challenge, @CVPR 2023 </b>
-      <br> <u>Jian Liu</u>, Sipeng Zhang, Chuixin Kong, Wenyuan Zhang, Yuhang Wu, Yikang Ding, Borun Xu, Ruibo Ming, Donglai Wei, Xianming Liu
+      <br> <b>Jian Liu</b>, Sipeng Zhang, Chuixin Kong, Wenyuan Zhang, Yuhang Wu, Yikang Ding, Borun Xu, Ruibo Ming, Donglai Wei, Xianming Liu
       <br>
       [<a href="https://opendrivelab.com/AD23Challenge.html">Challenge Website</a>]
     </td>
