--- a/index.html
+++ b/index.html
@@ -114,6 +114,28 @@
   <tbody>
   
   <tr>
+    <td class="pub_td1"><img src="./files/pvcontext-pipeline.png" class="papericon"></td>
+    <td class="pub_td2"><br><b>PVContext: Hybrid Context Model for Point Cloud Compression</b>
+      <br>Guoqing Zhang, Wenbo Zhao, <b>Jian Liu</b>, Yuanchao Bai, Junjun Jiang, Xianming Liu
+      <br>Arxiv 2024
+      <br>
+      [<a href="https://arxiv.org/abs/2409.12724">PDF</a>]
+    </td>
+  </tr>
+
+
+  <tr>
+    <td class="pub_td1"><img src="./files/diffocc-pipeline.png" class="papericon"></td>
+    <td class="pub_td2"><br><b>Diffusion-Occ: 3D Point Cloud Completion via Occupancy Diffusion</b>
+      <br>Guoqing Zhang, <b>Jian Liu*</b>
+      <br>Arxiv 2024
+      <br>
+      [<a href="https://www.arxiv.org/abs/2408.14846">PDF</a>]
+    </td>
+  </tr>
+
+  
+  <tr>
     <td class="pub_td1"><img src="./files/airfoil-pipeline.png" class="papericon"></td>
     <td class="pub_td2"><br><b>AFBench: A Large-scale Benchmark for Airfoil Design</b>
       <br><b>Jian Liu</b>, Jianyu Wu, Hairun Xie, Guoqing Zhang, Jing Wang, Wei Liu, Wanli Ouyang, Junjun Jiang, Xianming Liu, Shixiang Tang, Miao Zhang
@@ -127,7 +149,7 @@
 
 
   <tr>
-    <td class="pub_td1"><img src="./files/ssd_pipeline.png" class="papericon"></td>
+    <td class="pub_td1"><img src="./files/ude-pipeline.png" class="papericon"></td>
     <td class="pub_td2"><br><b>Stealing Stable Diffusion Prior for Robust Monocular Depth Estimation</b>
       <br> Yifan Mao*, <b>Jian Liu*</b>, Xianming Liu
       <br>Arxiv 2024
@@ -141,7 +163,7 @@
 
   
   <tr>
-    <td class="pub_td1"><img src="./files/reps_pipeline.png" class="papericon"></td>
+    <td class="pub_td1"><img src="./files/reps_pipeline_new.png" class="papericon"></td>
     <td class="pub_td2"><br><b>REPS: Reconstruction-based Point Cloud Sampling</b>
       <br>Guoqing Zhang*, <b>Jian Liu*</b>, Wenbo Zhao, Xianming Liu
       <br>Arxiv 2024
