--- a/index.html
+++ b/index.html
@@ -107,7 +107,25 @@
 
 
 
+<h2>Publications</h2>
 
+<table class="pub_table">
+  <tbody>
+
+  <tr>
+    <td class="pub_td1"><img src="./files/airfoil-pipeline.png" class="papericon"></td>
+    <td class="pub_td2"><br><b>AFBench: A Large-scale Benchmark for Airfoil Design</b>
+      <br><b>Jian Liu</b>, Jianyu Wu, Hairun Xie, Guoqing Zhang, Jing Wang, Wei Liu, Wanli Ouyang, Junjun Jiang, Xianming Liu, Shixiang Tang, Miao Zhang
+      <br><b>NeurIPS 2024</b>
+      <br>
+      [<a href="https://arxiv.org/abs/2406.18846">PDF</a>]
+      [<a href="https://github.com/hitcslj/AFBench">Github</a>]
+      [<a href="https://hitcslj.github.io/afbench/">Project Page</a>]
+    </td>
+  </tr>
+
+  </tbody>
+</table>
 
 <h2>Preprints</h2>
 <table class="pub_table">
@@ -135,19 +153,6 @@
   </tr>
 
   
-  <tr>
-    <td class="pub_td1"><img src="./files/airfoil-pipeline.png" class="papericon"></td>
-    <td class="pub_td2"><br><b>AFBench: A Large-scale Benchmark for Airfoil Design</b>
-      <br><b>Jian Liu</b>, Jianyu Wu, Hairun Xie, Guoqing Zhang, Jing Wang, Wei Liu, Wanli Ouyang, Junjun Jiang, Xianming Liu, Shixiang Tang, Miao Zhang
-      <br>Paper UnderReview
-      <br>
-      [<a href="https://arxiv.org/abs/2406.18846">PDF</a>]
-      [<a href="https://github.com/hitcslj/AFBench">Github</a>]
-      [<a href="https://hitcslj.github.io/afbench/">Project Page</a>]
-    </td>
-  </tr>
-
-
   <tr>
     <td class="pub_td1"><img src="./files/ude-pipeline.png" class="papericon"></td>
     <td class="pub_td2"><br><b>Stealing Stable Diffusion Prior for Robust Monocular Depth Estimation</b>
@@ -197,7 +202,7 @@
     <td class="pub_td1"><img src="./files/dino_sd.png" class="papericon"></td>
     <td class="pub_td2"><br><b>DINO-SD: Champion Solution for ICRA 2024 RoboDepth Challenge</b>
       <br>Yifan Mao*, Ming Li*, <b>Jian Liu*</b>, Jiayang Liu, Zihan Qin, Cunxi Chu, Jialei Xu, Wenbo Zhao, Junjun Jiang, Xianming Liu
-      <br>ICRA24 RoboDrive Challenge
+      <br><b>ICRA24</b> RoboDrive Challenge
       <br>
       [<a href="https://arxiv.org/abs/2405.17102">PDF</a>]
       [<a href="https://github.com/hitcslj/DINO-SD">Github</a>]
@@ -209,7 +214,7 @@
     <td class="pub_td1"><img src="./files/occtransformer.png" class="papericon"></td>
     <td class="pub_td2"><br><b>OccTransformer: Improving BEVFormer for 3D camera-only occupancy prediction</b>
       <br><b>Jian Liu</b>, Sipeng Zhang, Chuixin Kong, Wenyuan Zhang, Yuhang Wu, Yikang Ding, Borun Xu, Ruibo Ming, Donglai Wei, Xianming Liu
-      <br>CVPR23 Autonomous Driving Challenge
+      <br><b>CVPR23</b> Autonomous Driving Challenge
       <br>
       [<a href="https://arxiv.org/abs/2402.18140">PDF</a>]
       [<a href="https://www.bilibili.com/video/BV1pN411D7au/?spm_id_from=333.999.0.0&vd_source=0fb3bb9416e8fa252211d77e6b01b9d0">Talk</a>]
