--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       <br><b>NeurIPS 2024</b>
       <br>
       [<a href="https://arxiv.org/abs/2406.18846">PDF</a>]
-      [<a href="https://github.com/hitcslj/AFBench">Github</a>]
+      [<a href="https://github.com/open-sciencelab/Intern-WingWing">Github</a>]
       [<a href="https://hitcslj.github.io/afbench/">Project Page</a>]
     </td>
   </tr>
