--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <h2>Experience</h2>
 <ul>
   <li>
-    Sep.2023 - July.2023 , <i>Research Intern</i>, <b><a href="https://www.shlab.org.cn/"> Shanghai AI Lab</a></b>, supervised by <b><a href="https://scholar.google.com/citations?hl=en&user=TJ4ihdkAAAAJ">Shixiang Tang</a></b> and <b><a href="https://wlouyang.github.io/">Wanli Ouyang</a></b> 
+    Sep.2023 - July.2024 , <i>Research Intern</i>, <b><a href="https://www.shlab.org.cn/"> Shanghai AI Lab</a></b>, supervised by <b><a href="https://scholar.google.com/citations?hl=en&user=TJ4ihdkAAAAJ">Shixiang Tang</a></b> and <b><a href="https://wlouyang.github.io/">Wanli Ouyang</a></b> 
   </li>
   <li>
     May.2022 - Aug.2023 , <i>Research Intern</i>, <b><a href="https://research.megvii.com/">Megvii Research</a></b>, supervised by <b><a href="https://github.com/hzwer">Zhewei Huang</a></b> 
@@ -116,7 +116,7 @@
     <td class="pub_td1"><img src="./files/airfoil-pipeline.png" class="papericon"></td>
     <td class="pub_td2"><br><b>AFBench: A Large-scale Benchmark for Airfoil Design</b>
       <br><b>Jian Liu</b>, Jianyu Wu, Hairun Xie, Guoqing Zhang, Jing Wang, Wei Liu, Wanli Ouyang, Junjun Jiang, Xianming Liu, Shixiang Tang, Miao Zhang
-      <br><b>NeurIPS 2024</b>
+      <br><b>NeurIPS 2024 D&B Track</b>
       <br>
       [<a href="https://arxiv.org/abs/2406.18846">PDF</a>]
       [<a href="https://github.com/open-sciencelab/Intern-WingWing">Github</a>]
