china national scholarship

--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
 <h2>Selected Awards</h2>
 <ul>
   <li>
+    China <b>National</b> Scholarship, 2024
+  </li>
+  <li>
     <b>Outstanding</b> Intern at Shanghai AI Lab, 2024
   </li>
   <li>
