--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <br>Harbin, China
         <br>
         <br> Email:  
-        <a href="hitcslj@stu.hit.edu.cn"> hitcslj@stu.hit.edu.cn</a>;
+        <a href="liujian2498065510@gmail.com">liujian2498065510@gmail.com</a>;
 <!--        <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="liujian2498065510@gmail.com"> liujian2498065510@gmail.com</a>-->
         <br> Github: 
         <a href="https://github.com/hitcslj">https://github.com/hitcslj</a>
@@ -65,14 +65,14 @@
 
 <h2>Biography</h2>
 
-  <p> I am a final year Master student in Computer Science at Harbin Institute of Technology (HIT).
-  I obtained my Bachelor's degree in Software Engineering from HIT in 2022. 
-  I am actively engaged in research focused on various aspects of <b>3D vision</b>, including <a href="https://github.com/hitcslj/awesome-robust-depth-estimation">depth estimation</a>, <a href="https://github.com/hitcslj/Awesome-Point-Cloud-Completion">point cloud analysis</a>, <a href="https://github.com/CVPR2023-3D-Occupancy-Prediction/CVPR2023-3D-Occupancy-Prediction">3d occupancy prediction</a>, <a href="https://github.com/hitcslj/Awesome-AIGC-3D">AIGC 3D</a>. Additionally, I am also involved in the exciting field of <b>AI4Science</b>, specifically in the area of <a href="https://github.com/hitcslj/awesome-airfoil-design">airfoil design</a>. </p>
-
-
-
+<p>
+  I am currently a member of Tencent Hunyuan 3D, specializing in Low-Poly Generation. I earned my Bachelor's and Master's degrees from Harbin Institute of Technology (HIT) in 2022 and 2024 respectively. My professional interests lie in AI-driven content creation, particularly in the fields of industrial design, 3D point cloud processing, and 3D mesh generation.
+</p>
 <h2>Experience</h2>
 <ul>
+  <li>
+    Aug.2024 - Now , <i>Research Intern</i>, <b><a href="https://hunyuan.tencent.com/"> Tencent Hunyuan</a></b>, working closely with <b><a href="https://whaohan.github.io/">Haohan Weng</a></b>
+  </li>
   <li>
     Sep.2023 - July.2024 , <i>Research Intern</i>, <b><a href="https://www.shlab.org.cn/"> Shanghai AI Lab</a></b>, supervised by <b><a href="https://scholar.google.com/citations?hl=en&user=TJ4ihdkAAAAJ">Shixiang Tang</a></b> and <b><a href="https://wlouyang.github.io/">Wanli Ouyang</a></b> 
   </li>
@@ -114,6 +114,18 @@
 
 <table class="pub_table">
   <tbody>
+  
+  <tr>
+    <td class="pub_td1"><img src="./files/bpt.png" class="papericon"></td>
+    <td class="pub_td2"><br><b>Scaling Mesh Generation via Compressive Tokenization</b>
+      <br>Haohan Weng, Zibo Zhao, Biwen Lei, Xianghui Yang, <b>Jian Liu</b>, Zeqiang Lai, Zhuo Chen, Yuhong Liu, Jie Jiang, Chunchao Guo, Tong Zhang, Shenghua Gao, C. L. Philip Chen
+      <br><b>CVPR 2025</b>
+      <br>
+      [<a href="https://arxiv.org/abs/2411.07025">PDF</a>]
+      [<a href="https://github.com/whaohan/bpt">Github</a>]
+      [<a href="https://whaohan.github.io/bpt">Project Page</a>]
+    </td>
+  </tr>
 
   <tr>
     <td class="pub_td1"><img src="./files/airfoil-pipeline.png" class="papericon"></td>
@@ -200,6 +212,18 @@
 <h2>Technical Reports</h2>
 <table class="pub_table">
   <tbody>
+  
+  <tr>
+    <td class="pub_td1"><img src="./files/hunyuan3d_2.png" class="papericon"></td>
+    <td class="pub_td2"><br><b>Hunyuan3D 2.0: Scaling Diffusion Models for High Resolution Textured 3D Assets Generation</b>
+      <br>Jian Liu is one of the contributors of Low-poly Generation
+      <br>
+      [<a href="https://arxiv.org/abs/2501.12202">PDF</a>]
+      [<a href="https://github.com/Tencent/Hunyuan3D-2">Github</a>]
+      [<a href="https://3d-models.hunyuan.tencent.com/">Projects Page</a>]
+
+    </td>
+  </tr>
 
   <tr>
     <td class="pub_td1"><img src="./files/dino_sd.png" class="papericon"></td>
