--- a/index.html
+++ b/index.html
@@ -65,8 +65,10 @@
 
 <h2>Biography</h2>
 
-<p>
-  I am currently a member of Tencent Hunyuan 3D, specializing in Low-Poly Generation. I earned my Bachelor's and Master's degrees from Harbin Institute of Technology (HIT) in 2022 and 2024 respectively. My professional interests lie in AI-driven content creation, particularly in the fields of industrial design, 3D point cloud processing, and 3D mesh generation.
+<p> 
+  I am a final year Master student in Computer Science at Harbin Institute of Technology (HIT).
+  I obtained my Bachelor's degree in Software Engineering from HIT in 2022. 
+  My research interest include but not limited to: 1. 3D generation  2. Auto Regressive Model and Diffusion Model   3. Re-inforcement Learning
 </p>
 <h2>Experience</h2>
 <ul>
@@ -88,6 +90,9 @@
 
 <h2>Selected Awards</h2>
 <ul>
+  <li>
+    <b>Outstanding</b> Graduate of Heilongjiang Province, China, 2025 
+  </li>
   <li>
     <b>Outstanding</b> Graduates of Harbin Institute of Technology, 2025 
   </li>
