update service review ACM MM

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 <h2>Service</h2>
 
 <ul>
-  <li> Conference Reviewer: NeurIPS, ICME.</li>
+  <li> Conference Reviewer: NeurIPS, ACM MM, ICME.</li>
 </ul>
 
 <br>
