--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
     <tr>
       <td width="670">
         <div id="toptitle">
-        <h1>Jian Liu (Benjamin) &nbsp; 刘建</h1></div>
-        <h3>Master student</h3>
-        <p>Advanced Imaging and Intelligent Analysis Laboratory
-        <br>Computing Faculty
-        <br>Harbin Institute of Technology
-        <br>Harbin, China
+        <h1>Jian Liu &nbsp; 刘建</h1></div>
+        <h3>Phd student</h3>
+        <p> Pervasive Intelligence Lab
+        <br>Department of Computer Science and Engineering
+        <br>Hong Kong University of Science and Technology
+        <br>Clear Water Bay, Kowloon, Hong Kong
         <br>
         <br> Email:  
         <a href="liujian2498065510@gmail.com">liujian2498065510@gmail.com</a>;
@@ -45,7 +45,7 @@
         <br> Google Scholar: 
         <a href="https://scholar.google.com/citations?user=lgtXgTUAAAAJ&hl=en">Google Scholar Link</a>
         <br> Leetcode
-        <a href="https://leetcode.cn/u/hitcslj/">Leetcode Link</a>
+        <a href="https://leetcode.com/u/UShitcslj/">Leetcode Link</a>
 <!--          https://leetcode.com/u/UShitcslj/-->
         <br> CV: 
         <a href="./files/jianliu.pdf">CV Link(Chinese)</a>
@@ -66,9 +66,9 @@
 <h2>Biography</h2>
 
 <p> 
-  I am a final year Master student in Computer Science at Harbin Institute of Technology (HIT).
-  I obtained my Bachelor's degree in Software Engineering from HIT in 2022. 
-  My research interest include but not limited to: 1. 3D generation  2. Auto Regressive Model and Diffusion Model   3. Re-inforcement Learning
+  I'm an incoming PhD student at HKUST, commencing in Fall 2025 under the supervision of <b><a href="https://scholar.google.com/citations?user=Ib-sizwAAAAJ&hl=en">Song Guo</a></b>. 
+  Before this, I earned my Bachelor's and Master's degrees in Software Engineering from HIT in 2022 and 2024, respectively.
+  My research interests include: 1. 3D generation 2. Auto-Regressive Models and Diffusion Models 3. Reinforcement Learning.
 </p>
 <h2>Experience</h2>
 <ul>
@@ -122,21 +122,20 @@
 
 <table class="pub_table">
   <tbody>
-  
+
   <tr>
-    <td class="pub_td1"><img src="./files/bpt.png" class="papericon"></td>
-    <td class="pub_td2"><br><b>Scaling Mesh Generation via Compressive Tokenization</b>
-      <br>Haohan Weng, Zibo Zhao, Biwen Lei, Xianghui Yang, <b>Jian Liu</b>, Zeqiang Lai, Zhuo Chen, Yuhong Liu, Jie Jiang, Chunchao Guo, Tong Zhang, Shenghua Gao, C. L. Philip Chen
-      <br><b>CVPR 2025</b>
+    <td class="pub_td1"><img src="./files/freemesh.png" class="papericon" width="200" height="120"></td>
+    <td class="pub_td2"><br><b>FreeMesh: Boosting Mesh Generation with Coordinates Merging</b>
+      <br><b>Jian Liu</b>, Haohan Weng, Biwen Lei, Xianghui Yang, Zibo Zhao, Zhuo Chen, Song Guo, Tao Han, Chunchao Guo
+      <br><b>ICML 2025</b>
       <br>
       [<a href="https://arxiv.org/abs/2411.07025">PDF</a>]
-      [<a href="https://github.com/whaohan/bpt">Github</a>]
-      [<a href="https://whaohan.github.io/bpt">Project Page</a>]
+      [<a href="https://github.com/hitcslj/FreeMesh">Github</a>]
     </td>
   </tr>
 
   <tr>
-    <td class="pub_td1"><img src="./files/airfoil-pipeline.png" class="papericon"></td>
+    <td class="pub_td1"><img src="./files/airfoil-pipeline.png" class="papericon" width="200" height="120"></td>
     <td class="pub_td2"><br><b>AFBench: A Large-scale Benchmark for Airfoil Design</b>
       <br><b>Jian Liu</b>, Jianyu Wu, Hairun Xie, Guoqing Zhang, Jing Wang, Wei Liu, Wanli Ouyang, Junjun Jiang, Xianming Liu, Shixiang Tang, Miao Zhang
       <br><b>NeurIPS 2024 D&B Track</b>
@@ -144,6 +143,18 @@
       [<a href="https://arxiv.org/abs/2406.18846">PDF</a>]
       [<a href="https://github.com/open-sciencelab/Intern-WingWing">Github</a>]
       [<a href="https://hitcslj.github.io/afbench/">Project Page</a>]
+    </td>
+  </tr>
+
+  <tr>
+    <td class="pub_td1"><img src="./files/bpt.png" class="papericon" width="200" height="130"></td>
+    <td class="pub_td2"><br><b>Scaling Mesh Generation via Compressive Tokenization</b>
+      <br>Haohan Weng, Zibo Zhao, Biwen Lei, Xianghui Yang, <b>Jian Liu</b>, Zeqiang Lai, Zhuo Chen, Yuhong Liu, Jie Jiang, Chunchao Guo, Tong Zhang, Shenghua Gao, C. L. Philip Chen
+      <br><b>CVPR 2025</b>
+      <br>
+      [<a href="https://arxiv.org/abs/2411.07025">PDF</a>]
+      [<a href="https://github.com/whaohan/bpt">Github</a>]
+      [<a href="https://whaohan.github.io/bpt">Project Page</a>]
     </td>
   </tr>
 
@@ -155,6 +166,18 @@
   <tbody>
   
   <tr>
+    <td class="pub_td1"><img src="./files/aigc_3d.png" class="papericon" ></td>
+    <td class="pub_td2"><br><b>A Comprehensive Survey on 3D Content Generation</b>
+      <br><b>Jian Liu</b>, Xiaoshui Huang, Tianyu Huang, Lu Chen, Yuenan Hou, Shixiang Tang, Ziwei Liu, Wanli Ouyang, Wangmeng Zuo, Junjun Jiang, Xianming Liu
+      <br>Arxiv 2024
+      <br>
+      [<a href="https://arxiv.org/abs/2402.01166">PDF</a>]
+      [<a href="https://github.com/hitcslj/Awesome-AIGC-3D">Github</a>]
+    </td>
+  </tr>
+
+
+  <!-- <tr>
     <td class="pub_td1"><img src="./files/pvcontext-pipeline.png" class="papericon"></td>
     <td class="pub_td2"><br><b>PVContext: Hybrid Context Model for Point Cloud Compression</b>
       <br>Guoqing Zhang, Wenbo Zhao, <b>Jian Liu</b>, Yuanchao Bai, Junjun Jiang, Xianming Liu
@@ -199,19 +222,9 @@
       [<a href="https://arxiv.org/abs/2403.05047">PDF</a>]
       [<a href="https://github.com/hitcslj/REPS">Github</a>]
     </td>
-  </tr>
+  </tr> -->
 
 
-  <tr>
-    <td class="pub_td1"><img src="./files/aigc_3d.png" class="papericon"></td>
-    <td class="pub_td2"><br><b>A Comprehensive Survey on 3D Content Generation</b>
-      <br><b>Jian Liu</b>, Xiaoshui Huang, Tianyu Huang, Lu Chen, Yuenan Hou, Shixiang Tang, Ziwei Liu, Wanli Ouyang, Wangmeng Zuo, Junjun Jiang, Xianming Liu
-      <br>Arxiv 2024
-      <br>
-      [<a href="https://arxiv.org/abs/2402.01166">PDF</a>]
-      [<a href="https://github.com/hitcslj/Awesome-AIGC-3D">Github</a>]
-    </td>
-  </tr>
 
   </tbody>
 </table>
