update neurips25 submitted

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
   </tr>
 
   <tr>
-    <td class="pub_td1"><img src="./files/airfoil-pipeline.png" class="papericon" width="200" height="120"></td>
+    <td class="pub_td1"><img src="./files/airfoil-pipeline.png" class="papericon" width="200" height="110"></td>
     <td class="pub_td2"><br><b>AFBench: A Large-scale Benchmark for Airfoil Design</b>
       <br><b>Jian Liu</b>, Jianyu Wu, Hairun Xie, Guoqing Zhang, Jing Wang, Wei Liu, Wanli Ouyang, Junjun Jiang, Xianming Liu, Shixiang Tang, Miao Zhang
       <br><b>NeurIPS 2024 D&B Track</b>
@@ -147,7 +147,7 @@
   </tr>
 
   <tr>
-    <td class="pub_td1"><img src="./files/bpt.png" class="papericon" width="200" height="130"></td>
+    <td class="pub_td1"><img src="./files/bpt.png" class="papericon" width="200" height="120"></td>
     <td class="pub_td2"><br><b>Scaling Mesh Generation via Compressive Tokenization</b>
       <br>Haohan Weng, Zibo Zhao, Biwen Lei, Xianghui Yang, <b>Jian Liu</b>, Zeqiang Lai, Zhuo Chen, Yuhong Liu, Jie Jiang, Chunchao Guo, Tong Zhang, Shenghua Gao, C. L. Philip Chen
       <br><b>CVPR 2025</b>
@@ -166,7 +166,29 @@
   <tbody>
   
   <tr>
-    <td class="pub_td1"><img src="./files/aigc_3d.png" class="papericon" ></td>
+    <td class="pub_td1"><img src="./files/auto-connect.png" class="papericon" width="200" height="100"></td>
+    <td class="pub_td2"><br><b>Auto-Connect: Connectivity-Preserving RigFormer with Direct Preference Optimization</b>
+      <br>Jingfeng Guo*, <b>Jian Liu*</b>, Jinnan Chen, Shiwei Mao, Changrong Hu, Puhua Jiang, Junlin Yu, Jing Xu, Qi Liu, LiXin Xu, Zhuo Chen, Chunchao Guo
+      <br>Under Review
+      <br>
+      [<a href="https://arxiv.org/abs/2402.01166">PDF</a>]
+      [<a href="https://github.com/hitcslj/Awesome-AIGC-3D">Github</a>]
+    </td>
+  </tr>
+
+  <tr>
+    <td class="pub_td1"><img src="./files/mesh-rft.png" class="papericon" width="200" height="120"></td>
+    <td class="pub_td2"><br><b>Mesh-RFT: Enhancing Mesh Generation via Fine-grained Reinforcement Fine-Tuning</b>
+      <br><b>Jian Liu</b>, Jing Xu, Song Guo, Jing Li, Guojingfeng, Jiaao Yu, Haohan Weng, Biwen Lei, Xianghui Yang, Zhuo Chen, Fangqi Zhu, Tao Han, Chunchao Guo
+      <br>Under Review
+      <br>
+      [<a href="https://arxiv.org/abs/2402.01166">PDF</a>]
+      [<a href="https://github.com/hitcslj/Mesh-RFT">Github</a>]
+    </td>
+  </tr>
+  
+  <tr>
+    <td class="pub_td1"><img src="./files/aigc_3d.png" class="papericon" width="200" height="80"></td>
     <td class="pub_td2"><br><b>A Comprehensive Survey on 3D Content Generation</b>
       <br><b>Jian Liu</b>, Xiaoshui Huang, Tianyu Huang, Lu Chen, Yuenan Hou, Shixiang Tang, Ziwei Liu, Wanli Ouyang, Wangmeng Zuo, Junjun Jiang, Xianming Liu
       <br>Arxiv 2024
