--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       <br><b>Jian Liu</b>, Haohan Weng, Biwen Lei, Xianghui Yang, Zibo Zhao, Zhuo Chen, Song Guo, Tao Han, Chunchao Guo
       <br><b>ICML 2025</b>
       <br>
-      [<a href="https://arxiv.org/abs/2411.07025">PDF</a>]
+      [<a href="http://arxiv.org/abs/2505.13573">PDF</a>]
       [<a href="https://github.com/hitcslj/FreeMesh">Github</a>]
     </td>
   </tr>
@@ -171,19 +171,22 @@
       <br>Jingfeng Guo*, <b>Jian Liu*</b>, Jinnan Chen, Shiwei Mao, Changrong Hu, Puhua Jiang, Junlin Yu, Jing Xu, Qi Liu, LiXin Xu, Zhuo Chen, Chunchao Guo
       <br>Under Review
       <br>
-      [<a href="https://arxiv.org/abs/2402.01166">PDF</a>]
-      [<a href="https://github.com/hitcslj/Awesome-AIGC-3D">Github</a>]
+      [<a href="">PDF</a>]
+      [<a href="">Github</a>]
+      [<a href="https://autoconnectrig.github.io/">Project Page</a>]
+      
     </td>
   </tr>
 
   <tr>
     <td class="pub_td1"><img src="./files/mesh-rft.png" class="papericon" width="200" height="120"></td>
     <td class="pub_td2"><br><b>Mesh-RFT: Enhancing Mesh Generation via Fine-grained Reinforcement Fine-Tuning</b>
-      <br><b>Jian Liu</b>, Jing Xu, Song Guo, Jing Li, Guojingfeng, Jiaao Yu, Haohan Weng, Biwen Lei, Xianghui Yang, Zhuo Chen, Fangqi Zhu, Tao Han, Chunchao Guo
+      <br><b>Jian Liu*</b>, Jing Xu*, Song Guo, Jing Li, Jingfeng Guo, Jiaao Yu, Haohan Weng, Biwen Lei, Xianghui Yang, Zhuo Chen, Fangqi Zhu, Tao Han, Chunchao Guo
       <br>Under Review
       <br>
-      [<a href="https://arxiv.org/abs/2402.01166">PDF</a>]
+      [<a href="https://arxiv.org/abs/2505.16761">PDF</a>]
       [<a href="https://github.com/hitcslj/Mesh-RFT">Github</a>]
+      [<a href="https://hitcslj.github.io/mesh-rft/">Project Page</a>]
     </td>
   </tr>
   
