--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 <p> 
   I'm an incoming PhD student at HKUST, commencing in Fall 2025 under the supervision of <b><a href="https://scholar.google.com/citations?user=Ib-sizwAAAAJ&hl=en">Song Guo</a></b>. 
-  Before this, I earned my Bachelor's and Master's degrees in Software Engineering from HIT in 2022 and 2024, respectively.
+  Before this, I earned my Bachelor's and Master's degrees in Computer Science and Technology from HIT in 2022 and 2024, respectively.
   My research interests include: 1. 3D generation 2. Auto-Regressive Models and Diffusion Models 3. Reinforcement Learning.
 </p>
 <h2>Experience</h2>
