--- a/index.html
+++ b/index.html
@@ -131,6 +131,8 @@
       <br>
       [<a href="http://arxiv.org/abs/2505.13573">PDF</a>]
       [<a href="https://github.com/hitcslj/FreeMesh">Github</a>]
+      [<a href="https://hitcslj.github.io/freemesh/">Project Page</a>]
+
     </td>
   </tr>
 
