--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <h2>Biography</h2>
 
 <p> 
-  I'm an incoming PhD student at HKUST, commencing in Fall 2025 under the supervision of <b><a href="https://scholar.google.com/citations?user=Ib-sizwAAAAJ&hl=en">Song Guo</a></b>. 
+  I'm an incoming PhD student at HKUST, commencing in 2025 Fall under the supervision of <b><a href="https://scholar.google.com/citations?user=Ib-sizwAAAAJ&hl=en">Song Guo</a></b>. 
   Before this, I earned my Bachelor's and Master's degrees in Computer Science and Technology from HIT in 2022 and 2024, respectively.
   My research interests include: 1. 3D generation 2. Auto-Regressive Models and Diffusion Models 3. Reinforcement Learning.
 </p>
