--- a/index.html
+++ b/index.html
@@ -73,7 +73,10 @@
 <h2>Experience</h2>
 <ul>
   <li>
-    Aug.2024 - Now , <i>Research Intern</i>, <b><a href="https://hunyuan.tencent.com/"> Tencent Hunyuan</a></b>, working closely with <b><a href="https://whaohan.github.io/">Haohan Weng</a></b>
+    July.2025 - Now , <i>Qingyun Research Intern</i>, <b><a href="https://hunyuan.tencent.com/"> Tencent Hunyuan</a></b>, working closely with <b><a href="https://whaohan.github.io/">Haohan Weng</a></b>
+  </li>
+  <li>
+    Aug.2024 - June.2025 , <i>Research Intern</i>, <b><a href="https://hunyuan.tencent.com/"> Tencent Hunyuan</a></b>, working closely with <b><a href="https://whaohan.github.io/">Haohan Weng</a></b>
   </li>
   <li>
     Sep.2023 - July.2024 , <i>Research Intern</i>, <b><a href="https://www.shlab.org.cn/"> Shanghai AI Lab</a></b>, supervised by <b><a href="https://scholar.google.com/citations?hl=en&user=TJ4ihdkAAAAJ">Shixiang Tang</a></b> and <b><a href="https://wlouyang.github.io/">Wanli Ouyang</a></b> 
