--- a/index.html
+++ b/index.html
@@ -171,20 +171,20 @@
   <tbody>
   
   <tr>
-    <td class="pub_td1"><img src="./files/auto-connect.png" class="papericon" width="200" height="100"></td>
+    <td class="pub_td1"><img src="./files/auto-connect.gif" class="papericon" width="200" height="150"></td>
     <td class="pub_td2"><br><b>Auto-Connect: Connectivity-Preserving RigFormer with Direct Preference Optimization</b>
       <br>Jingfeng Guo*, <b>Jian Liu*</b>, Jinnan Chen, Shiwei Mao, Changrong Hu, Puhua Jiang, Junlin Yu, Jing Xu, Qi Liu, LiXin Xu, Zhuo Chen, Chunchao Guo
       <br>Under Review
       <br>
-      [<a href="">PDF</a>]
-      [<a href="">Github</a>]
+      [<a href="https://arxiv.org/abs/2506.11430">PDF</a>]
+      [<a href="https://autoconnectrig.github.io/">Github</a>]
       [<a href="https://autoconnectrig.github.io/">Project Page</a>]
       
     </td>
   </tr>
 
   <tr>
-    <td class="pub_td1"><img src="./files/mesh-rft.png" class="papericon" width="200" height="120"></td>
+    <td class="pub_td1"><img src="./files/mesh-rft.gif" class="papericon" width="200" height="150"></td>
     <td class="pub_td2"><br><b>Mesh-RFT: Enhancing Mesh Generation via Fine-grained Reinforcement Fine-Tuning</b>
       <br><b>Jian Liu*</b>, Jing Xu*, Song Guo, Jing Li, Jingfeng Guo, Jiaao Yu, Haohan Weng, Biwen Lei, Xianghui Yang, Zhuo Chen, Fangqi Zhu, Tao Han, Chunchao Guo
       <br>Under Review
