--- a/index.html
+++ b/index.html
@@ -337,12 +337,10 @@
   <li> Conference Reviewer: NeurIPS, ACM MM, ICME.</li>
 </ul>
 
+
 <br>
-
-
-
-<a href="https://mapmyvisitors.com/web/1by2h"  title="Visit tracker"><img src="https://mapmyvisitors.com/map.png?d=f6H62vvUiuP417y0Ay_kEFkOzotDi4AXgmWyKl59wTY&cl=ffffff" /></a>
-
-
+<table class="sub-table" style="width: 200px;height: 100px;border: none;" align="center">
+<script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=DzEEn3qPzmklRD2TVo3QO_YYcEDXbZGS7gLOtEUF5LU"></script>
+</table>
 
 </div></div></body></html>
