--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
 <h2>Biography</h2>
 
 <p> 
-  I'm an incoming PhD student at HKUST, commencing in 2025 Fall under the supervision of <b><a href="https://scholar.google.com/citations?user=Ib-sizwAAAAJ&hl=en">Song Guo</a></b>. 
-  Before this, I earned my Bachelor's and Master's degrees in Computer Science and Technology from HIT in 2022 and 2024, respectively.
-  My research interests include: 1. 3D generation 2. Auto-Regressive Models and Diffusion Models 3. Reinforcement Learning.
+  I am a first-year PhD student in Computer Science and Engineering at the Hong Kong University of Science and Technology (HKUST), supervised by <b><a href="https://scholar.google.com/citations?user=Ib-sizwAAAAJ&hl=en">Prof. Song Guo</a></b>. 
+  I received my Bachelor's and Master's degrees in Computer Science and Technology from Harbin Institute of Technology (HIT) in 2022 and 2024, respectively.
+  My research focuses on cutting-edge areas including <strong>3D content generation</strong>, <strong>auto-regressive models and diffusion models</strong>, and <strong>reinforcement learning</strong>.
 </p>
 <h2>Experience</h2>
 <ul>
