--- a/index.html
+++ b/index.html
@@ -265,9 +265,20 @@
   <tbody>
   
   <tr>
+    <td class="pub_td1"><img src="./files/hunyuan3d_studio.png" class="papericon"></td>
+    <td class="pub_td2"><br><b>Hunyuan3D Studio: End-to-End AI Pipeline for Game-Ready 3D Asset Generation</b>
+      <br>Jian Liu is one of the core contributors of Low-poly Generation
+      <br>
+      [<a href="https://arxiv.org/abs/2509.12815">PDF</a>]
+      [<a href="https://3d.hunyuan.tencent.com/">Projects Page</a>]
+
+    </td>
+  </tr>
+
+  <tr>
     <td class="pub_td1"><img src="./files/hunyuan3d_2.png" class="papericon"></td>
     <td class="pub_td2"><br><b>Hunyuan3D 2.0: Scaling Diffusion Models for High Resolution Textured 3D Assets Generation</b>
-      <br>Jian Liu is one of the contributors of Low-poly Generation
+      <br>Jian Liu is one of the core contributors of Low-poly Generation
       <br>
       [<a href="https://arxiv.org/abs/2501.12202">PDF</a>]
       [<a href="https://github.com/Tencent/Hunyuan3D-2">Github</a>]
