--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 <h2>Experience</h2>
 <ul>
   <li>
-    July.2025 - Now , <i>Qingyun Research Intern</i>, <b><a href="https://hunyuan.tencent.com/"> Tencent Hunyuan</a></b>, working closely with <b><a href="https://whaohan.github.io/">Haohan Weng</a></b>
+    July.2025 - Now , <i>Qingyun Research Intern</i>, <b><a href="https://hunyuan.tencent.com/"> Tencent Hunyuan</a></b>, working closely with <b><a href="https://whaohan.github.io/">Haohan Weng</a></b> and <b><a href="https://scholar.google.com/citations?user=5d5Y9BoAAAAJ&hl=zh-CN">Biwen Lei</a></b>
   </li>
   <li>
     Aug.2024 - June.2025 , <i>Research Intern</i>, <b><a href="https://hunyuan.tencent.com/"> Tencent Hunyuan</a></b>, working closely with <b><a href="https://whaohan.github.io/">Haohan Weng</a></b>
@@ -126,6 +126,31 @@
 <table class="pub_table">
   <tbody>
 
+    <tr>
+    <td class="pub_td1"><img src="./files/mesh-rft.gif" class="papericon" width="200" height="150"></td>
+    <td class="pub_td2"><br><b>Mesh-RFT: Enhancing Mesh Generation via Fine-grained Reinforcement Fine-Tuning</b>
+      <br><b>Jian Liu*</b>, Jing Xu*, Song Guo, Jing Li, Jingfeng Guo, Jiaao Yu, Haohan Weng, Biwen Lei, Xianghui Yang, Zhuo Chen, Fangqi Zhu, Tao Han, Chunchao Guo
+      <br><b>NeurIPS 2025, Spotlight</b>
+      <br>
+      [<a href="https://arxiv.org/abs/2505.16761">PDF</a>]
+      [<a href="https://github.com/hitcslj/Mesh-RFT">Github</a>]
+      [<a href="https://hitcslj.github.io/mesh-rft/">Project Page</a>]
+    </td>
+  </tr>  
+
+    <tr>
+    <td class="pub_td1"><img src="./files/auto-connect.gif" class="papericon" width="200" height="150"></td>
+    <td class="pub_td2"><br><b>Auto-Connect: Connectivity-Preserving RigFormer with Direct Preference Optimization</b>
+      <br>Jingfeng Guo*, <b>Jian Liu*</b>, Jinnan Chen, Shiwei Mao, Changrong Hu, Puhua Jiang, Junlin Yu, Jing Xu, Qi Liu, LiXin Xu, Zhuo Chen, Chunchao Guo
+      <br><b>NeurIPS 2025</b>
+      <br>
+      [<a href="https://arxiv.org/abs/2506.11430">PDF</a>]
+      [<a href="https://autoconnectrig.github.io/">Github</a>]
+      [<a href="https://autoconnectrig.github.io/">Project Page</a>]
+      
+    </td>
+  </tr>
+
   <tr>
     <td class="pub_td1"><img src="./files/freemesh.png" class="papericon" width="200" height="120"></td>
     <td class="pub_td2"><br><b>FreeMesh: Boosting Mesh Generation with Coordinates Merging</b>
@@ -169,31 +194,6 @@
 <h2>Preprints</h2>
 <table class="pub_table">
   <tbody>
-  
-  <tr>
-    <td class="pub_td1"><img src="./files/auto-connect.gif" class="papericon" width="200" height="150"></td>
-    <td class="pub_td2"><br><b>Auto-Connect: Connectivity-Preserving RigFormer with Direct Preference Optimization</b>
-      <br>Jingfeng Guo*, <b>Jian Liu*</b>, Jinnan Chen, Shiwei Mao, Changrong Hu, Puhua Jiang, Junlin Yu, Jing Xu, Qi Liu, LiXin Xu, Zhuo Chen, Chunchao Guo
-      <br>Under Review
-      <br>
-      [<a href="https://arxiv.org/abs/2506.11430">PDF</a>]
-      [<a href="https://autoconnectrig.github.io/">Github</a>]
-      [<a href="https://autoconnectrig.github.io/">Project Page</a>]
-      
-    </td>
-  </tr>
-
-  <tr>
-    <td class="pub_td1"><img src="./files/mesh-rft.gif" class="papericon" width="200" height="150"></td>
-    <td class="pub_td2"><br><b>Mesh-RFT: Enhancing Mesh Generation via Fine-grained Reinforcement Fine-Tuning</b>
-      <br><b>Jian Liu*</b>, Jing Xu*, Song Guo, Jing Li, Jingfeng Guo, Jiaao Yu, Haohan Weng, Biwen Lei, Xianghui Yang, Zhuo Chen, Fangqi Zhu, Tao Han, Chunchao Guo
-      <br>Under Review
-      <br>
-      [<a href="https://arxiv.org/abs/2505.16761">PDF</a>]
-      [<a href="https://github.com/hitcslj/Mesh-RFT">Github</a>]
-      [<a href="https://hitcslj.github.io/mesh-rft/">Project Page</a>]
-    </td>
-  </tr>
   
   <tr>
     <td class="pub_td1"><img src="./files/aigc_3d.png" class="papericon" width="200" height="80"></td>
